logs/dag_id=currency_parsing/run_id=scheduled__2024-04-12T000000+0000/task_id=fetch_data/attempt=8.log
[2024-04-14T08:25:53.553+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: currency_parsing.fetch_data scheduled__2024-04-12T00:00:00+00:00 [queued]>
[2024-04-14T08:25:53.570+0000] {taskinstance.py:1979} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: currency_parsing.fetch_data scheduled__2024-04-12T00:00:00+00:00 [queued]>
[2024-04-14T08:25:53.571+0000] {taskinstance.py:2193} INFO - Starting attempt 8 of 9
[2024-04-14T08:25:53.601+0000] {taskinstance.py:2214} INFO - Executing <Task(PythonOperator): fetch_data> on 2024-04-12 00:00:00+00:00
[2024-04-14T08:25:53.608+0000] {standard_task_runner.py:60} INFO - Started process 422 to run task
[2024-04-14T08:25:53.614+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'currency_parsing', 'fetch_data', 'scheduled__2024-04-12T00:00:00+00:00', '--job-id', '159', '--raw', '--subdir', 'DAGS_FOLDER/currency_parsing.py', '--cfg-path', '/tmp/tmpc0lcnrr_']
[2024-04-14T08:25:53.618+0000] {standard_task_runner.py:88} INFO - Job 159: Subtask fetch_data
[2024-04-14T08:25:53.713+0000] {task_command.py:423} INFO - Running <TaskInstance: currency_parsing.fetch_data scheduled__2024-04-12T00:00:00+00:00 [running]> on host e8a1e0443283
[2024-04-14T08:25:53.874+0000] {taskinstance.py:2510} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='currency_parsing' AIRFLOW_CTX_TASK_ID='fetch_data' AIRFLOW_CTX_EXECUTION_DATE='2024-04-12T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='8' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-04-12T00:00:00+00:00'
[2024-04-14T08:25:53.895+0000] {logging_mixin.py:188} INFO - ['АВСТРАЛИЙСКИЙ ДОЛЛАР', 'AUD', '292.59', '1', 'DOWN', '-3.56', '2024-4-12']
[2024-04-14T08:25:53.896+0000] {logging_mixin.py:188} INFO - ['currency', 'title', 'rate', 'quantity', 'index', 'change', 'date']
[2024-04-14T08:25:53.911+0000] {base.py:83} INFO - Using connection ID 'dwh' for task execution.
[2024-04-14T08:25:53.929+0000] {taskinstance.py:2728} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 444, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 414, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 200, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 217, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/currency_parsing.py", line 38, in fetch_data
    dwh_hook.insert_rows(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 565, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
LINE 1: ... (currency, title, rate, quantity, index, change, date) VALU...
                                                             ^

[2024-04-14T08:25:53.948+0000] {taskinstance.py:1149} INFO - Marking task as UP_FOR_RETRY. dag_id=currency_parsing, task_id=fetch_data, execution_date=20240412T000000, start_date=20240414T082553, end_date=20240414T082553
[2024-04-14T08:25:53.971+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 159 for task fetch_data (INSERT has more target columns than expressions
LINE 1: ... (currency, title, rate, quantity, index, change, date) VALU...
                                                             ^
; 422)
[2024-04-14T08:25:53.987+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-04-14T08:25:54.021+0000] {taskinstance.py:3309} INFO - 0 downstream tasks scheduled from follow-on schedule check
